2012-02-27  James Turk  <jturk@sunlightfoundation.com>

[James]
  - Yet another fix for Python 3, remove an extra items() call in congress client
  - Bumping to 1.1.1
[Paul]
  - Modified all the examples to work on Python 3

2012-02-26  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* MANIFEST.in: Including the docs in the sdist tarball.
* Bump release to 1.0.6, then to 1.1.0

2012-02-21  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/service.py: Fixed the decode param to work with python2.6. This
issue was discovered and reported by @eyeseast on GitHub. Sorry for the bumpy
ride, everyone.
* Bump release to 1.0.5

2012-02-17  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/service.py: Added a UTF hint to the .decode() call, it was
resulting in a unicode error when translating UTF -> ASCII. This resulted in
issue #170 in OpenStates.
* Hotfix release, thanks ehazlett!
* Bump release to 1.0.4

2012-02-17  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* Import InvalidRequestException to the IE module, thanks pyflakes!
* Bump release to 1.0.3

2012-02-11  James Turk  <jturk@sunlightfoundation.com>

* fix urllib imports for Python 3 compatibility
* Bump release to 1.0.2

2012-02-08  James Turk  <jturk@sunlightfoundation.com>

* fix MANIFEST.in for PyPI and pip install directions
* Bump release from 1.0 -> 1.0.1

2012-02-08  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* Updating README.rst to reflect a "1.0" status.
 - Added "Contributing" block, and "License" block.
* Bumping release to 1.0from 1.1~rc1.

2012-02-07  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* Bumping release to 1.0~rc1
* Removed the set-key binary, it was not really ready for use.

2012-02-06  James Turk  <jturk@sunlightfoundation.com>

* refactor documentation to prepare for release
* internal classes are now lowercase, ugly but it fixes sphinx
* rename sunlight.common to sunlight.config