@@ -92,13 +92,12 @@ class capitolwords(sunlight.service.Service):
     # API impl methods below
 
     def _get_url( self, obj, apikey, **kwargs ):
-        ret = "%s/%s.json?apikey=%s" % (
+        ret = "%s/%s.json?apikey=%s&%s" % (
             service_url,
             obj,
-            apikey
+            apikey,
+            sunlight.service.urlencode(kwargs)
         )
-        for arg in kwargs:
-            ret += "&%s=%s" % ( arg, kwargs[arg] )
         return ret
 
     def _decode_response( self, response ):
